Cambios generales en el estilo de la web, agregados nuevos componentes React

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import Badge from "../components/Badge.astro";
 <Layout title="Santiago Martelli | Programador y Desarrollador Web"
 description="Hola! Soy Santiago Martelli, un programador y desarrollador web con conocimientos de HTML, CSS, JavaScript, Vue.js, Php, Laravel, MySQL y más. Disponible para trabajar!">
     <section class="mx-auto flex flex-col justify-center">
-      <h2 class="text-white pb-6"><span class="text-white">&gt;</span> Extracto</h2>
+      <h2 class="pb-6 text-orange-700"><span>&gt;</span> Extracto</h2>
       <p class="text-md pb-10 text-pretty">
         Desarrollador de Aplicaciones Web motivado, entusiasta y con una sólida formación teórica. Aunuqe a
         simple vista mi experiencia parezca limitada, cuento con proyectos personales que muestran mis capacidades para
@@ -14,7 +14,7 @@ description="Hola! Soy Santiago Martelli, un programador y desarrollador web con
         reales. Me apasiona aprender y mejorar constantemente, por lo que estoy dispuesto a enfrentar nuevos desafíos y
 				aportar valor a cualquier equipo de trabajo.
       </p>
-      <h2 class="text-white pb-6"><span class="text-white">&gt;</span> Habilidades</h2>
+      <h2 class="pb-6 text-orange-700"><span>&gt;</span> Habilidades</h2>
       <div class="flex flex-row gap-3 flex-wrap pb-10">
         <Badge>HTML</Badge>
         <Badge>CSS</Badge>
