--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,9 @@
 ---
-import "@fontsource-variable/onest";
-import "@fontsource-variable/fira-code";
-import "@fontsource/geist-mono";
+// Supports weights 100-900
+import '@fontsource-variable/inter';
 // import Header from "../components/Header.astro";
 import Navbar from "../components/Navbar";
 import Footer from "../components/Footer.astro";
-import type { classicNameResolver } from "typescript";
 
 interface Props {
   title: string;
@@ -25,19 +23,16 @@ const { description, title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-black h-screen p-8 flex flex-col text-zinc-400 flex-grow">
+  <body class="flex flex-col flex-grow animate-fadeIn">
     <Navbar client:load />
-    <main
-      class="flex flex-grow h-full w-full md:w-[84%] animate-fadeIn overflow-auto mx-auto my-5 items-center justify-center">
       <slot />
-    </main>
     <!-- <Footer class="flex-shrink-0" /> -->
   </body>
 
   <style is:global>
-    :root {
+    /* :root {
       color-scheme: light dark;
-    }
+    } */
 
     //Reset css
   *, *::before, *::after {
@@ -47,25 +42,23 @@ const { description, title } = Astro.props;
     }
 
     :focus {
-      outline: 0.5px solid white;
+      outline: 0.5px solid #0369A1;
     }
 
     html,
     body {
       height: 100%;
-      font-family: "Geist Mono", "Fira Code Variable", "Onest Variable", system-ui, sans-serif;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
+      font-family: "Inter variable", system-ui, sans-serif;
     }
 
     main {
       display: flex;
       flex-direction: column;
-      flex-grow: 1;
       overflow: auto;
+      scroll-behavior: smooth;
+      margin: 0;
+      padding: 0;
+      overflow-x: hidden;
     }
   </style>
 </html>
