--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,15 +32,13 @@ import Curriculum from "../icons/Curriculum.astro";
         </div>
       </div>
     </section>
-
     <div class="divider"></div>
-
     <!-- About me section -->
     <section id="about" class="w-screen pt-10 pb-44">
       <div class="flex flex-col gap-y-10 max-md:mx-4 items-center">
         <h2 class="text-3xl font-bold text-center uppercase">Sobre Mí</h2>
         <div class="flex flex-col gap-y-8 items-center justify-center md:flex-row md:gap-x-5">
-          <img src="../../public/logo.jpg" alt="Santiago Martelli" class="rounded-full w-36" />
+          <img src="/logo.jpg" alt="Santiago Martelli" class="rounded-full w-36" />
           <p class="text-justify px-4 md:w-2/3">
             Desarrollador de Aplicaciones Web motivado, entusiasta y con una sólida formación teórica. Aunuqe a simple
             vista mi experiencia parezca limitada, cuento con proyectos personales que muestran mis capacidades para
@@ -49,25 +47,9 @@ import Curriculum from "../icons/Curriculum.astro";
             desafíos y aportar valor a cualquier equipo de trabajo.
           </p>
         </div>
-
-        <div class="flex flex-row gap-3 flex-wrap items-center justify-center">
-          <Badge>HTML</Badge>
-          <Badge>CSS</Badge>
-          <Badge>JavaScript</Badge>
-          <Badge>Vue.js</Badge>
-          <Badge>Node.js</Badge>
-          <Badge>Express.js</Badge>
-          <Badge>PHP</Badge>
-          <Badge>Laravel</Badge>
-          <Badge>MySQL</Badge>
-          <Badge>Git</Badge>
-          <Badge>Tailwind CSS</Badge>
-        </div>
       </div>
     </section>
-
     <div class="divider2"></div>
-
     <!-- Projects section -->
     <section id="projects" class="flex justify-center w-screen pt-10 pb-44 bg-slate-100">
       <div class="flex flex-col max-md:mx-4 gap-y-10 items-center">
@@ -75,9 +57,25 @@ import Curriculum from "../icons/Curriculum.astro";
         <Projects client:visible />
       </div>
     </section>
-
-    <div class="divider"></div>
-
+    <div class="divider3"></div>
+    <!-- Skills section -->
+    <section id="skills" class="flex flex-col justify-center items-center w-screen pt-10 pb-44 bg-black">
+      <h2 class="text-3xl font-bold uppercase text-white pb-6">Habilidades</h2>
+      <div class="flex flex-row gap-3 flex-wrap items-center justify-center">
+        <Badge>HTML</Badge>
+        <Badge>CSS</Badge>
+        <Badge>JavaScript</Badge>
+        <Badge>Vue.js</Badge>
+        <Badge>Node.js</Badge>
+        <Badge>Express.js</Badge>
+        <Badge>PHP</Badge>
+        <Badge>Laravel</Badge>
+        <Badge>MySQL</Badge>
+        <Badge>Git</Badge>
+        <Badge>Tailwind CSS</Badge>
+      </div>
+    </section>
+    <div class="divider4"></div>
     <!-- Contact section -->
     <section id="contact" class="mx-auto flex flex-col justify-center w-screen pt-10 pb-10">
       <div class="flex flex-col max-md:mx-4 gap-y-10 items-center">
@@ -86,26 +84,29 @@ import Curriculum from "../icons/Curriculum.astro";
           Si tienes alguna pregunta o simplemente quieres saludar, no dudes en escribirme. Estoy disponible para
           trabajar en proyectos interesantes.
         </p>
-        <form action="https://formspree.io/f/moqyqzqz" method="POST" class="flex flex-col gap-y-4 w-full max-md:mx-4 md:w-1/2">
+        <form
+          action="https://formspree.io/f/moqyqzqz"
+          method="POST"
+          class="flex flex-col gap-y-4 w-full max-md:mx-4 md:w-1/2">
           <input
             type="text"
             name="name"
             placeholder="Nombre"
             class="p-2 border-b
-            border-gray-300 focus:outline-none focus:border-b focus:border-b-sky-700"
+              border-gray-300 focus:outline-none focus:border-b focus:border-b-sky-700"
           />
           <input
             type="email"
             name="email"
             placeholder="Correo Electrónico"
             class="p-2 border-b
-            border-gray-300 focus:outline-none focus:border-b focus:border-b-sky-700"
+              border-gray-300 focus:outline-none focus:border-b focus:border-b-sky-700"
           />
           <textarea
             name="message"
             placeholder="Mensaje"
             class="p-2 border-b border-gray-300
-            focus:outline-none focus:border-b focus:border-b-sky-700"
+              focus:outline-none focus:border-b focus:border-b-sky-700"
           ></textarea>
           <div class="w-full flex items-center justify-center">
             <button
@@ -116,7 +117,6 @@ import Curriculum from "../icons/Curriculum.astro";
           </div>
         </form>
         <p class="text-center">También puedes encontrarme en mis redes sociales o descargar mi CV</p>
-
         <div class="flex justify-between">
           <div class="flex gap-x-2">
             <div
@@ -144,7 +144,6 @@ import Curriculum from "../icons/Curriculum.astro";
         </div>
       </div>
     </section>
-
     <!-- Footer section -->
     <footer class="flex justify-center items-center opacity-75 bg-black py-1">
       <p class="text-center text-white text-xs">&copy; 2024 Santiago Martelli. Todos los derechos reservados.</p>
@@ -167,5 +166,22 @@ import Curriculum from "../icons/Curriculum.astro";
       border-bottom: calc(100vw * 0.059) solid #f1f5f9;
       margin-top: calc(-100vw * 0.059);
     }
+
+    .divider3 {
+      width: 0;
+      height: 0;
+      border-left: 100vw solid transparent;
+      border-bottom: calc(100vw * 0.059) solid #000;
+      margin-top: calc(-100vw * 0.059);
+    }
+
+    .divider4 {
+      width: 0;
+      height: 0;
+      border-right: 100vw solid transparent;
+      border-bottom: calc(100vw * 0.059) solid #fff;
+      margin-top: calc(-100vw * 0.059);
+    }
+
   </style>
 </Layout>
