Mejorado el Modal, implementado responsive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -111,7 +111,7 @@ import Curriculum from "../icons/Curriculum.astro";
           <div class="w-full flex items-center justify-center">
             <button
               type="submit"
-              class="px-6 py-2 w-fit transition duration-150 ease-in rounded-lg border border-black hover:border-green-600"
+              class="px-6 py-2 w-fit transition duration-150 ease-in rounded-md text-white border border-black bg-black  hover:bg-white hover:text-black hover:border-black hover:shadow-md"
               >Enviar</button
             >
           </div>
